--- a/Examples/Basic/Xapien.Example.Basic/Properties/launchSettings.json
+++ b/Examples/Basic/Xapien.Example.Basic/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "profiles": {
     "Xapien.Example.Basic": {
       "commandName": "Project"
+    },
+    "WSL": {
+      "commandName": "WSL2",
+      "distributionName": ""
     }
   }
 }
