--- a/Xapien/Xapien.csproj
+++ b/Xapien/Xapien.csproj
@@ -4,6 +4,25 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageId>$(AssemblyName)</PackageId>
+    <Title>Xipe.Xapien</Title>
+    <Authors>ZeLTicK09</Authors>
+    <Company>Xipe Group </Company>
+    <Description>Xapien is a data processing framework that aims to simplify the initial setup of a data processing application and allow developers to simply focus on the processing logic</Description>
+    <PackageProjectUrl>https://github.com/ErickRV/Xapien</PackageProjectUrl>
+    <PackageOutputPath>bin\Publish</PackageOutputPath>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.0</FileVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
