[FIX] Fixes in folders and stuff

--- a/Examples/Xapien.Example.State/Xapien.Example.State.csproj
+++ b/Examples/Xapien.Example.State/Xapien.Example.State.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Xapien\Xapien.csproj" />
+    <PackageReference Include="Xapien" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
